fixed layout issue for tabs in settings dialog

--- a/src/chrome/content/Settings.css
+++ b/src/chrome/content/Settings.css
@@ -31,14 +31,6 @@
 
 
 
-tabpanel.overflow {
-    /*overflow: auto;*/
-}
-
-tab {
-    padding: 0.5em;
-}
-
 #extensionName {
     font-size: large;
     font-weight: bold;
